(library
 (public_name nightmare_js)
 (name nightmare_js)
 (libraries
  preface
  nightmare.service
  js_of_ocaml-compiler.runtime
  lwt
  js_of_ocaml-lwt)
 (modules_without_implementation aliases interfaces bindings)
 (modes byte)
 (js_of_ocaml
  (javascript_files stubs/caml_promise_stubs.js))
 (preprocess
  (pps js_of_ocaml-ppx)))
